generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "mysql"
}

model Referral {
  id            Int      @id @default(autoincrement())
  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")
  memberName    String   @map("member_name") @db.VarChar(512)
  memberEmail   String   @map("member_email") @db.VarChar(512)
  prospectName  String   @map("prospect_name") @db.VarChar(512)
  prospectEmail String   @map("prospect_email") @db.VarChar(512)
  referralCode  String   @map("referral_code") @db.VarChar(100)
  redeemed      Boolean  @default(false)

  @@index([createdAt])
  @@index([referralCode])
  @@map("referral")
}

model ContactGroup {
  id          Int      @id @default(autoincrement())
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")
  name        String   @db.VarChar(100)
  description String?  @db.VarChar(500)
  ownerid     Int

  members       ContactGroupMember[]
  messageGroups MessageGroup[]
  events        Event[]

  @@index([ownerid])
  @@map("contact_group")
}

model ContactGroupMember {
  id                Int       @id @default(autoincrement())
  groupId           Int       @map("group_id")
  memberId          Int       @map("member_id")
  notifyEmail       Boolean   @default(true) @map("notify_email")
  notifySms         Boolean   @default(false) @map("notify_sms")
  addedAt           DateTime  @default(now()) @map("added_at")
  addedBy           Int       @map("added_by")
  unsubscribedAt    DateTime? @map("unsubscribed_at")
  unsubscribeMethod String?   @map("unsubscribe_method") @db.VarChar(50)

  group ContactGroup @relation(fields: [groupId], references: [id], onDelete: Cascade)

  @@unique([groupId, memberId])
  @@index([groupId, notifyEmail])
  @@index([groupId, notifySms])
  @@index([memberId])
  @@map("contact_group_member")
}

model SmsConsent {
  id             Int       @id @default(autoincrement())
  memberId       Int       @map("member_id")
  phone          String    @db.VarChar(512)
  phoneHash      String    @map("phone_hash") @db.VarChar(64)
  consentedAt    DateTime  @default(now()) @map("consented_at")
  consentMethod  String    @map("consent_method") @db.VarChar(50)
  consentText    String    @map("consent_text") @db.Text
  consentPurpose String    @map("consent_purpose") @db.VarChar(100)
  ipAddress      String?   @map("ip_address") @db.VarChar(512)
  revokedAt      DateTime? @map("revoked_at")
  revokeMethod   String?   @map("revoke_method") @db.VarChar(50)
  revokeMessage  String?   @map("revoke_message") @db.VarChar(500)

  @@index([memberId])
  @@index([phoneHash])
  @@index([consentedAt])
  @@map("sms_consent")
}

enum EmailSuppressionReason {
  hard_bounce
  complaint
  unsubscribe
}

model EmailSuppression {
  id           Int                    @id @default(autoincrement())
  email        String                 @db.VarChar(512)
  emailHash    String                 @unique @map("email_hash") @db.VarChar(64)
  reason       EmailSuppressionReason
  suppressedAt DateTime               @default(now()) @map("suppressed_at")

  @@map("email_suppression")
}

model Message {
  id          Int      @id @default(autoincrement())
  senderId    Int      @map("sender_id")
  subject     String   @db.VarChar(200)
  body        String   @db.Text
  sentAt      DateTime @default(now()) @map("sent_at")
  emailCount  Int      @default(0) @map("email_count")
  smsCount    Int      @default(0) @map("sms_count")
  failedCount Int      @default(0) @map("failed_count")
  isBlast     Boolean  @default(false) @map("is_blast")

  groups     MessageGroup[]
  recipients MessageRecipient[]

  @@index([senderId])
  @@index([sentAt])
  @@index([isBlast, sentAt])
  @@map("message")
}

model MessageGroup {
  id        Int @id @default(autoincrement())
  messageId Int @map("message_id")
  groupId   Int @map("group_id")

  message Message      @relation(fields: [messageId], references: [id], onDelete: Cascade)
  group   ContactGroup @relation(fields: [groupId], references: [id], onDelete: Cascade)

  @@unique([messageId, groupId])
  @@index([messageId])
  @@index([groupId])
  @@map("message_group")
}

model MessageRecipient {
  id          Int       @id @default(autoincrement())
  messageId   Int       @map("message_id")
  memberId    Int       @map("member_id")
  channel     String    @db.VarChar(10)
  status      String    @default("pending") @db.VarChar(20)
  externalId  String?   @map("external_id") @db.VarChar(100)
  sentAt      DateTime? @map("sent_at")
  deliveredAt DateTime? @map("delivered_at")
  error       String?   @db.VarChar(500)

  message Message @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@unique([messageId, memberId, channel])
  @@index([messageId])
  @@index([memberId])
  @@index([messageId, status])
  @@index([memberId, sentAt])
  @@index([externalId])
  @@map("message_recipient")
}

enum EventType {
  social
  networking
  volunteer
  meeting
}

enum RsvpStatus {
  going
  maybe
  declined
}

model Event {
  id           Int       @id @default(autoincrement())
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")
  title        String    @db.VarChar(200)
  description  String?   @db.Text
  location     String?   @db.VarChar(200)
  startDate    DateTime  @map("start_date")
  endDate      DateTime  @map("end_date")
  isAllDay     Boolean   @default(false) @map("is_all_day")
  rsvpDeadline DateTime? @map("rsvp_deadline")
  eventType    EventType @map("event_type")
  ownerid      Int
  groupId      Int?      @map("group_id")

  group    ContactGroup?  @relation(fields: [groupId], references: [id], onDelete: SetNull)
  rsvps    EventRsvp[]
  invitees EventInvitee[]

  @@index([ownerid])
  @@index([groupId])
  @@index([startDate])
  @@index([eventType])
  @@map("event")
}

model EventInvitee {
  id        Int      @id @default(autoincrement())
  eventId   Int      @map("event_id")
  memberId  Int      @map("member_id")
  createdAt DateTime @default(now()) @map("created_at")

  event Event @relation(fields: [eventId], references: [id], onDelete: Cascade)

  @@unique([eventId, memberId])
  @@index([eventId])
  @@index([memberId])
  @@map("event_invitee")
}

model EventRsvp {
  id          Int        @id @default(autoincrement())
  eventId     Int        @map("event_id")
  memberId    Int        @map("member_id")
  status      RsvpStatus
  respondedAt DateTime   @default(now()) @map("responded_at")

  event Event @relation(fields: [eventId], references: [id], onDelete: Cascade)

  @@unique([eventId, memberId])
  @@index([memberId])
  @@map("event_rsvp")
}

model UserPreference {
  id                     Int       @id @default(autoincrement())
  memberId               Int       @unique @map("member_id")
  notifyEmailDefault     Boolean   @default(true) @map("notify_email_default")
  notifySmsDefault       Boolean   @default(false) @map("notify_sms_default")
  photoUrl               String?   @map("photo_url") @db.VarChar(500)
  lastNotificationSeenAt DateTime? @map("last_notification_seen_at")
  createdAt              DateTime  @default(now()) @map("created_at")
  updatedAt              DateTime  @updatedAt @map("updated_at")

  @@map("user_preference")
}
